--- a/src/pages/components/dropdown/style.mdx
+++ b/src/pages/components/dropdown/style.mdx
@@ -31,10 +31,10 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 |                    | check            | `$inverse-01`                |
 |                    | border           | `$icon-01`                   |
 
-### Interactive states
+### Interactive states (by element)
 
 | Element                | State    | Property         | Color token          |
-| ---------------------- | -------- | ---------------- | -------------------- | ------------- |
+| ---------------------- | -------- | ---------------- | -------------------- |
 | **Label**              | Disabled | text color       | `$disabled-02`       |
 | **Field**              | Focus    | border           | `$focus`             |
 |                        | Hover    | background-color | `$hover-ui`          |
@@ -52,8 +52,32 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 |                        | Selected | checkmark        | `$icon-01`           |
 | **Menu option: light** | Hover    | background-color | `$hover-light-ui`    |
 |                        | Active   | background-color | `$selected-light-ui` |
-| **Tag**                | Selected |                  | background-color     | `$inverse-02` |
-|                        | Selected |                  | text color           | `$inverse-02` |
+| **Tag**                | Selected | background-color | `$inverse-02`        |
+|                        | Selected | text color       | `$inverse-02`        |
+
+### Interactive states (by state)
+
+| State    | Element            | Property         | Color token          |
+| -------- | ------------------ | ---------------- | -------------------- |
+| Focus    | Field              | border           | `$focus`             |
+| Disabled | Field              | text color       | `$disabled-02`       |
+|          | Field              | background-color | `$disabled-01`       |
+|          | Field              | text color       | `$disabled-02`       |
+| Hover    | Field              | background-color | `$hover-ui`          |
+|          | Field: light       | background-color | `$hover-light-ui`    |
+|          | Menu option        | background-color | `$hover-ui`          |
+|          | Menu option        | text color       | `$text-01`           |
+|          | Menu option: light | background-color | `$hover-light-ui`    |
+| Invalid  | Field              | svg              | `$support-01`        |
+|          | Field              | border-bottom    | `$support-01`        |
+|          | Field              | text-color       | `$text-error`        |
+| Active   | Field              | background-color | `$selected-light-ui` |
+|          | Menu option        | background-color | `$selected-ui`       |
+|          | Menu option: light | background-color | `$selected-light-ui` |
+| Selected | Menu optioin       | background-color | `$selected-ui`       |
+|          | Menu option        | checkmark        | `$icon-01`           |
+|          | Tag                | background-color | `$inverse-02`        |
+|          | Tag                | text color       | `$inverse-02`        |
 
 ## Typography
 
@@ -92,28 +116,29 @@ various color differences for closed and open dropdowns.
 
 <Caption>Structure and spacing measurements for dropdown | px / rem</Caption>
 
-### Size
+### Sizes
+
+The field height and menu option height should always match.
 
 | Element     | Property | Size    | px / rem |
 | ----------- | -------- | ------- | -------- |
-| Field       | height   | Default | 40 / 2.5 |
-|             | height   | Small   | 32 / 2   |
+| Field       | height   | Small   | 32 / 2   |
+|             | height   | Default | 40 / 2.5 |
 |             | height   | Large   | 48 / 3   |
-| Menu option | height   | Default | 40 / 2.5 |
-|             | height   | Small   | 32 / 2   |
+| Menu option | height   | Small   | 32 / 2   |
+|             | height   | Default | 40 / 2.5 |
 |             | height   | Large   | 48 / 3   |
 
 ## Multiselect dropdown
 
-| Class                             | Property                    | px / rem | Spacing tokens |
-| --------------------------------- | --------------------------- | -------- | -------------- |
-| `.bx--list-box`                   | height                      | 40 / 2.5 | –              |
-| `.bx--list-box__menu-item`        | height                      | 40 / 2.5 | –              |
-| `.bx--list-box__field`            | padding-left, padding-right | 16 / 1   | `$spacing-05`  |
-| `.bx--checkbox-label`             | padding-left                | 16 / 1   | `$spacing-05`  |
-| `.bx--list-box__menu-icon`        | padding-left, padding-right | 16 / 1   | `$spacing-05`  |
-| `.bx--list-box__selection--multi` | height                      | 24 / 1.5 | –              |
-| `.bx--list-box__selection--multi` | margin-right                | 16 / 1   | `$spacing-05`  |
+| Element  | Property                    | px / rem | Spacing tokens |
+| -------- | --------------------------- | -------- | -------------- |
+| Field    | padding-left, padding-right | 16 / 1   | `$spacing-05`  |
+| Checkbox | padding-left                | 16 / 1   | `$spacing-05`  |
+|          | padding-right               | 8 / .5   | `$spacing-03`  |
+| Chevron  | padding-left, padding-right | 16 / 1   | `$spacing-05`  |
+| Tag      | height                      | 24 / 1.5 | –              |
+|          | padding-right               | 8 / .5   | `$spacing-03`  |
 
 <div className="image--fixed">
 
