--- a/src/pages/help/faq/index.mdx
+++ b/src/pages/help/faq/index.mdx
@@ -10,6 +10,7 @@ description:
 <AnchorLink>About Carbon</AnchorLink>
 <AnchorLink>Contributing</AnchorLink>
 <AnchorLink>Creating with Carbon</AnchorLink>
+<AnchorLink>Telemetry</AnchorLink>
 
 </AnchorLinks>
 
@@ -141,3 +142,42 @@ You can find earlier versions of Carbon documentation here:
 **[V7](http://v7.carbondesignsystem.com/)**,
 **[V8](http://v8.carbondesignsystem.com/)**, and
 **[V9](http://v9.carbondesignsystem.com/).**
+
+## Telemetry
+
+Carbon contains a telemetry feature that collects usage information for IBM and
+Carbon Design System properties.
+
+### Why is telemetry collected?
+
+Carbon collects telemetry information to influence Carbon's roadmap and
+prioritize bug fixes.
+
+### When is data collected?
+
+Data is only collected when Carbon packages are installed on a Continuous
+Integration (CI) server, when the installation is not part of a Pull Request
+(PR), and for Git repositories with the origin remotes:
+
+- `github.ibm.com`
+- `github.com/ibm`
+- `github.com/carbon-design-system`
+
+As the information collected is not anonymous, telemetry data collection is
+limited to IBM GitHub Enterprise repositories, as well as open source
+repositories in the IBM and Carbon Design System GitHub organizations.
+
+### What is being collected?
+
+The following is collected through a postinstall script:
+
+- Git repository remote origin URLs and commit hashes
+- Packages and package versions used in the repository
+- Components being used including file paths and their packages
+- Component props being used (the prop value is only collected when it is
+  serializable to a string)
+
+### How do I opt out?
+
+Participation in Carbon's telemetry is optional. To opt-out, set the environment
+variable `CARBON_TELEMETRY_DISABLED` to `1`.
