--- a/src/pages/components/dropdown/style.mdx
+++ b/src/pages/components/dropdown/style.mdx
@@ -32,30 +32,31 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 |                    | check            | `$inverse-01`                |
 |                    | border           | `$icon-01`                   |
 
-### Interactive states (by element)
+### Interactive states
 
-| Element                | State    | Property         | Color token          |
-| ---------------------- | -------- | ---------------- | -------------------- |
-| **Label**              | Disabled | text color       | `$disabled-02`       |
-| **Field**              | Focus    | border           | `$focus`             |
-|                        | Hover    | background-color | `$hover-ui`          |
-|                        | Invalid  | svg              | `$support-01`        |
-|                        | Invalid  | border-bottom    | `$support-01`        |
-|                        | Invalid  | text-color       | `$text-error`        |
-|                        | Disabled | background-color | `$disabled-01`       |
-|                        | Disabled | text color       | `$disabled-02`       |
-| **Field: light**       | Hover    | background-color | `$hover-light-ui`    |
-|                        | Active   | background-color | `$selected-light-ui` |
-| **Menu option**        | Hover    | background-color | `$hover-ui`          |
-|                        | Hover    | text color       | `$text-01`           |
-|                        | Active   | background-color | `$selected-ui`       |
-|                        | Selected | background-color | `$selected-ui`       |
-|                        | Selected | checkmark        | `$icon-01`           |
-| **Menu option: light** | Hover    | background-color | `$hover-light-ui`    |
-|                        | Active   | background-color | `$selected-light-ui` |
-| **Tag**                | Selected | background-color | `$inverse-02`        |
-|                        | Selected | text color       | `$inverse-02`        |
+| Element            | State    | Property         | Color token          |
+| ------------------ | -------- | ---------------- | -------------------- |
+| Label              | Disabled | text color       | `$disabled-02`       |
+| Field              | Focus    | border           | `$focus`             |
+|                    | Hover    | background-color | `$hover-ui`          |
+|                    | Invalid  | svg              | `$support-01`        |
+|                    | Invalid  | border-bottom    | `$support-01`        |
+|                    | Invalid  | text-color       | `$text-error`        |
+|                    | Disabled | background-color | `$disabled-01`       |
+|                    | Disabled | text color       | `$disabled-02`       |
+| Field: light       | Hover    | background-color | `$hover-light-ui`    |
+|                    | Active   | background-color | `$selected-light-ui` |
+| Menu option        | Hover    | background-color | `$hover-ui`          |
+|                    | Hover    | text color       | `$text-01`           |
+|                    | Active   | background-color | `$selected-ui`       |
+|                    | Selected | background-color | `$selected-ui`       |
+|                    | Selected | checkmark        | `$icon-01`           |
+| Menu option: light | Hover    | background-color | `$hover-light-ui`    |
+|                    | Active   | background-color | `$selected-light-ui` |
+| Tag                | Selected | background-color | `$inverse-02`        |
+|                    | Selected | text color       | `$inverse-02`        |
 
+<!--
 ### Interactive states (by state)
 
 | State    | Element            | Property         | Color token          |
@@ -79,6 +80,7 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 |          | Menu option        | checkmark        | `$icon-01`           |
 |          | Tag                | background-color | `$inverse-02`        |
 |          | Tag                | text color       | `$inverse-02`        |
+-->
 
 ## Typography
 
@@ -133,7 +135,7 @@ can be applied to all variants of dropdown.
 |             | height   | Default | 40 / 2.5 |
 |             | height   | Large   | 48 / 3   |
 
-## Inline dropdown
+### Inline dropdown
 
 | Class       | Property                    | px / rem | Spacing token |
 | ----------- | --------------------------- | -------- | ------------- |
@@ -149,7 +151,7 @@ can be applied to all variants of dropdown.
 
 <Caption>Structure and spacing for inline dropdown | px / rem</Caption>
 
-## Multiselect dropdown
+### Multiselect dropdown
 
 | Element  | Property                    | px / rem | Spacing tokens |
 | -------- | --------------------------- | -------- | -------------- |
@@ -172,15 +174,15 @@ can be applied to all variants of dropdown.
   Structure and spacing measurements for a multiselect dropdown | px / rem
 </Caption>
 
-## Combo box
+### Combo box
 
-| Element    | Property                    | px / rem | Spacing token |
-| ---------- | --------------------------- | -------- | ------------- |
-| Label      | margin-bottom               | 8 / 0.5  | `$spacing-03` |
-| Field      | padding-left                | 16 / 1   | `$spacing-05` |
-|            | padding-right               | 72 / 4.5 | –             |
-| Chevron    | padding-left, padding-right | 16 / 1   | `$spacing-05` |
-| Clear icon | padding-left, padding-right | 16 / 1   | `$spacing-05` |
+| Element    | Property      | px / rem | Spacing token |
+| ---------- | ------------- | -------- | ------------- |
+| Label      | margin-bottom | 8 / 0.5  | `$spacing-03` |
+| Field      | padding-left  | 16 / 1   | `$spacing-05` |
+|            | padding-right | 72 / 4.5 | –             |
+| Chevron    | padding-right | 16 / 1   | `$spacing-05` |
+| Clear icon | padding-right | 8 / .5   | `$spacing-03` |
 
 <div className="image--fixed">
 
