color-images-added

--- a/src/pages/components/dropdown/style.mdx
+++ b/src/pages/components/dropdown/style.mdx
@@ -32,6 +32,18 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 |                    | check            | `$inverse-01`                |
 |                    | border           | `$icon-01`                   |
 
+<Row>
+<Column colLg={12}>
+
+![Dropdown variant examples](images/dropdown-style-1.png)
+
+</Column>
+</Row>
+
+<Caption>
+  Dropdown variant examples: default, inline, multi-select, combo-box.
+</Caption>
+
 ### Interactive states
 
 | Element            | State    | Property         | Color token          |
@@ -42,6 +54,8 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 |                    | Invalid  | svg              | `$support-01`        |
 |                    | Invalid  | border-bottom    | `$support-01`        |
 |                    | Invalid  | text-color       | `$text-error`        |
+|                    | Warning  | text-color       | `$text-01`           |
+|                    | Warning  | svg              | `$support-03`        |
 |                    | Disabled | background-color | `$disabled-01`       |
 |                    | Disabled | text color       | `$disabled-02`       |
 | Field: light       | Hover    | background-color | `$hover-light-ui`    |
@@ -56,31 +70,35 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 | Tag                | Selected | background-color | `$inverse-02`        |
 |                    | Selected | text color       | `$inverse-02`        |
 
-<!--
-### Interactive states (by state)
+<Row>
+<Column colLg={12}>
 
-| State    | Element            | Property         | Color token          |
-| -------- | ------------------ | ---------------- | -------------------- |
-| Focus    | Field              | border           | `$focus`             |
-| Disabled | Field              | text color       | `$disabled-02`       |
-|          | Field              | background-color | `$disabled-01`       |
-|          | Field              | text color       | `$disabled-02`       |
-| Hover    | Field              | background-color | `$hover-ui`          |
-|          | Field: light       | background-color | `$hover-light-ui`    |
-|          | Menu option        | background-color | `$hover-ui`          |
-|          | Menu option        | text color       | `$text-01`           |
-|          | Menu option: light | background-color | `$hover-light-ui`    |
-| Invalid  | Field              | svg              | `$support-01`        |
-|          | Field              | border-bottom    | `$support-01`        |
-|          | Field              | text-color       | `$text-error`        |
-| Active   | Field              | background-color | `$selected-light-ui` |
-|          | Menu option        | background-color | `$selected-ui`       |
-|          | Menu option: light | background-color | `$selected-light-ui` |
-| Selected | Menu optioin       | background-color | `$selected-ui`       |
-|          | Menu option        | checkmark        | `$icon-01`           |
-|          | Tag                | background-color | `$inverse-02`        |
-|          | Tag                | text color       | `$inverse-02`        |
--->
+![Dropdown field states](images/dropdown-style-2.png)
+
+</Column>
+</Row>
+
+<Caption>Dropdown field states.</Caption>
+
+<Row>
+<Column colLg={12}>
+
+![Dropdown menu states](images/dropdown-style-3.png)
+
+</Column>
+</Row>
+
+<Caption>Dropdown menu states.</Caption>
+
+<Row>
+<Column colLg={12}>
+
+![Inline dropdown states](images/dropdown-style-4.png)
+
+</Column>
+</Row>
+
+<Caption>Inline dropdown states.</Caption>
 
 ## Typography
 
