--- a/src/pages/components/dropdown/style.mdx
+++ b/src/pages/components/dropdown/style.mdx
@@ -21,7 +21,6 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 | Field              | background-color | `$field-01`                  |
 |                    | border-bottom    | `$ui-04`                     |
 | Field: light       | background-color | `$field-02`                  |
-| Field: inline      | background-color | `transparent`                |
 | Chevron            | svg              | `$icon-01`                   |
 | Menu option        | text color       | `$text-02`                   |
 |                    | background-color | `$field-01`                  |
@@ -46,13 +45,14 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 
 ### Interactive states
 
+<!--
+
 | Element            | State    | Property         | Color token          |
 | ------------------ | -------- | ---------------- | -------------------- |
-| Label              | Disabled | text color       | `$disabled-02`       |
 | Field              | Focus    | border           | `$focus`             |
 |                    | Hover    | background-color | `$hover-ui`          |
 |                    | Invalid  | svg              | `$support-01`        |
-|                    | Invalid  | border-bottom    | `$support-01`        |
+|                    | Invalid  | border     | `$support-01`        |
 |                    | Invalid  | text-color       | `$text-error`        |
 |                    | Warning  | text-color       | `$text-01`           |
 |                    | Warning  | svg              | `$support-03`        |
@@ -69,6 +69,32 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 |                    | Active   | background-color | `$selected-light-ui` |
 | Tag                | Selected | background-color | `$inverse-02`        |
 |                    | Selected | text color       | `$inverse-02`        |
+| Label              | Disabled | text color       | `$disabled-02`       |
+
+-->
+
+| State          | Element            | Property         | Color token          |
+| -------------- | ------------------ | ---------------- | -------------------- |
+| Focus          | Field              | border           | `$focus`             |
+| Hover          | Field              | background-color | `$hover-ui`          |
+|                | Menu option        | background-color | `$hover-ui`          |
+|                | Menu option        | text color       | `$text-01`           |
+|                | Field: light       | background-color | `$hover-light-ui`    |
+|                | Menu option: light | background-color | `$hover-light-ui`    |
+| Invalid        | Warning icon       | svg              | `$support-01`        |
+|                | Field              | border           | `$support-01`        |
+|                | Error message      | text-color       | `$text-error`        |
+| Warning        | Warning message    | text-color       | `$text-01`           |
+|                | Warning icon       | svg              | `$support-03`        |
+| Active         | Menu option        | background-color | `$selected-ui`       |
+|                | Menu option: light | background-color | `$selected-light-ui` |
+| Selected       | Menu option        | background-color | `$selected-ui`       |
+|                | Menu option        | checkmark        | `$icon-01`           |
+| Multi-selected | Tag                | background-color | `$inverse-02`        |
+|                | Tag                | text color       | `$inverse-02`        |
+| Disabled       | Field              | background-color | `$disabled-01`       |
+|                | Field              | text color       | `$disabled-02`       |
+|                | Label              | text color       | `$disabled-02`       |
 
 <Row>
 <Column colLg={12}>
@@ -78,17 +104,29 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 </Column>
 </Row>
 
-<Caption>Dropdown field states.</Caption>
+<Caption>Dropdown states</Caption>
 
-<Row>
-<Column colLg={12}>
+### Inline loading
 
-![Dropdown menu states](images/dropdown-style-3.png)
-
-</Column>
-</Row>
-
-<Caption>Dropdown menu states.</Caption>
+| Element            | State    | Property         | Color token          |
+| ------------------ | -------- | ---------------- | -------------------- |
+| Field              | Enabled  | background-color | `transparent`        |
+|                    | Hover    | background-color | `$hover-ui`          |
+| Field text         | Enabled  | text color       | `$text-01`           |
+| Chevron            | Enabled  | svg              | `$icon-01`           |
+| Menu option        | Enabled  | text color       | `$text-02`           |
+|                    | Enabled  | background-color | `$field-01`          |
+|                    | Hover    | background-color | `$hover-ui`          |
+|                    | Hover    | text color       | `$text-01`           |
+|                    | Active   | background-color | `$selected-ui`       |
+|                    | Selected | background-color | `$selected-ui`       |
+|                    | Selected | checkmark        | `$icon-01`           |
+| Menu option: light | Enabled  | background-color | `$field-01`          |
+|                    | Hover    | background-color | `$hover-light-ui`    |
+|                    | Active   | background-color | `$selected-light-ui` |
+| Error              | Invalid  | svg              | `$support-01`        |
+|                    | Invalid  | border-bottom    | `$support-01`        |
+|                    | Invalid  | text-color       | `$text-error`        |
 
 <Row>
 <Column colLg={12}>
