docs: update carbon team page team members (#2088)
* docs: update carbon team page team members

* Update src/pages/all-about-carbon/the-team.mdx

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

* Update src/pages/all-about-carbon/the-team.mdx

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/src/pages/all-about-carbon/the-team.mdx
+++ b/src/pages/all-about-carbon/the-team.mdx
@@ -33,11 +33,6 @@ and successful in designing digital experiences and products.
 ![Josh Black headshot](/images/team/black_josh.png)
 
 </Profile>
-<Profile name="Matt Brothers" title="Front-end Developer">
-
-![Matt Brothers headshot](/images/team/brothers_matt.png)
-
-</Profile>
 <Profile name="Robin Cannon" title="Program Director">
 
 ![Robin Cannon headshot](/images/team/cannon_robin.png)
@@ -58,6 +53,11 @@ and successful in designing digital experiences and products.
 ![Alessandra Davila headshot](/images/team/davila_ale.png)
 
 </Profile>
+<Profile name="Thy Do" title="Visual Designer">
+
+![Thy Do headshot](/images/team/do_thy.png)
+
+</Profile>
 <Profile name="TJ Egan" title="Front-end Developer">
 
 ![TJ Egan headshot](/images/team/egan_tj.png)
@@ -73,6 +73,11 @@ and successful in designing digital experiences and products.
 ![Jillian Howarth headshot](/images/team/howarth_jillian.png)
 
 </Profile>
+<Profile name="Taylor Jones" title="Software Developer">
+
+![Taylor Jones headshot](/images/team/jones_taylor.png)
+
+</Profile>
 <Profile name="Alison Joseph" title="Development Manager">
 
 ![Alison Joseph headshot](/images/team/joseph_alison.png)
@@ -81,6 +86,11 @@ and successful in designing digital experiences and products.
 <Profile name="D.A. Kahn" title="Front-end Developer, Accessibility Advocate">
 
 ![DA Kahn headshot](/images/team/kahn_da.png)
+
+</Profile>
+<Profile name="Tracey King" title="Senior Visual Designer">
+
+![Tracey King headshot](/images/team/king_tracey.png)
 
 </Profile>
 <Profile name="Josefina Mancilla"  title="Front-end Developer">
