--- a/src/pages/components/dropdown/style.mdx
+++ b/src/pages/components/dropdown/style.mdx
@@ -99,15 +99,26 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 <Row>
 <Column colLg={12}>
 
-![Dropdown field states](images/dropdown-style-2.png)
+![Dropdown and combo-box states](images/dropdown-style-2.png)
 
 </Column>
 </Row>
 
-<Caption>Dropdown states</Caption>
+<Caption>Dropdown and combo-box states</Caption>
+
+<Row>
+<Column colLg={12}>
+
+![Multi-select dropdown states](images/dropdown-style-3.png)
+
+</Column>
+</Row>
+
+<Caption>Multi-select dropdown states</Caption>
 
 ### Inline loading
 
+<!--
 | Element            | State    | Property         | Color token          |
 | ------------------ | -------- | ---------------- | -------------------- |
 | Field              | Enabled  | background-color | `transparent`        |
@@ -127,6 +138,27 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 | Error              | Invalid  | svg              | `$support-01`        |
 |                    | Invalid  | border-bottom    | `$support-01`        |
 |                    | Invalid  | text-color       | `$text-error`        |
+-->
+
+| Element  | State               | Property         | Color token          |
+| -------- | ------------------- | ---------------- | -------------------- |
+| Enabled  | Field               | background-color | `transparent`        |
+|          | Field text          | text color       | `$text-01`           |
+|          | Chevron             | svg              | `$icon-01`           |
+|          | Menu option         | text color       | `$text-02`           |
+|          | Menu option         | background-color | `$field-01`          |
+|          | Menu option: light  | background-color | `$field-02`          |
+| Hover    | Field               | background-color | `$hover-ui`          |
+|          | Menu option         | background-color | `$hover-ui`          |
+|          | Menu option         | text color       | `$text-01`           |
+|          | Menuo option: light | background-color | `$hover-light-ui`    |
+| Active   | Menu option         | background-color | `$selected-ui`       |
+|          | Menu option: light  | background-color | `$selected-light-ui` |
+| Selected | Menu option         | background-color | `$selected-ui`       |
+|          | Menu option         | checkmark        | `$icon-01`           |
+| Invalid  | Error icon          | svg              | `$support-01`        |
+|          | Field               | border           | `$support-01`        |
+|          | Error message       | text-color       | `$text-error`        |
 
 <Row>
 <Column colLg={12}>
