new structure  images

--- a/src/pages/components/dropdown/style.mdx
+++ b/src/pages/components/dropdown/style.mdx
@@ -200,10 +200,11 @@ various color differences for closed and open dropdowns.
 |             | border-bottom               | 1px      | –              |
 | Chevron     | padding-right, padding-left | 16 / 1   | `$spacing-05`  |
 | Helper text | margin-top                  | 4 / 0.25 | `$spacing-02`  |
+| State icon  | padding-right, padding-left | 16 / 1   | `$spacing-05`  |
 
 <div className="image--fixed">
 
-![Structure and spacing for a closed dropdown](images/dropdown-style-2.png)
+![Structure and spacing for a closed dropdown](images/dropdown-style-5.png)
 
 </div>
 
@@ -223,21 +224,31 @@ can be applied to all variants of dropdown.
 |             | height   | Default | 40 / 2.5 |
 |             | height   | Large   | 48 / 3   |
 
-### Inline dropdown
-
-| Class       | Property                    | px / rem | Spacing token |
-| ----------- | --------------------------- | -------- | ------------- |
-| Field text  | padding-right, padding-left | 16 / 1   | `$spacing-05` |
-| Menu option | padding-right, padding-left | 16 / 1   | `$spacing-05` |
-| Chevron     | padding-left, padding-right | 16 / 1   | `$spacing-05` |
-
 <div className="image--fixed">
 
-![Structure and spacing for inline dropdown](images/dropdown-style-5.png)
+![Dropdown sizes](images/dropdown-style-9.png)
 
 </div>
 
-<Caption>Structure and spacing for inline dropdown | px / rem</Caption>
+<Caption>Dropdown sizes | px / rem<</Caption>
+
+### Combo box
+
+| Element    | Property      | px / rem | Spacing token |
+| ---------- | ------------- | -------- | ------------- |
+| Label      | margin-bottom | 8 / 0.5  | `$spacing-03` |
+| Field      | padding-left  | 16 / 1   | `$spacing-05` |
+|            | padding-right | 72 / 4.5 | –             |
+| Chevron    | padding-right | 16 / 1   | `$spacing-05` |
+| Clear icon | padding-right | 8 / .5   | `$spacing-03` |
+
+<div className="image--fixed">
+
+![Spacing for combo-box dropdown](images/dropdown-style-6.png)
+
+</div>
+
+<Caption>Spacing for combbo-box dropdown | px / rem</Caption>
 
 ### Multiselect dropdown
 
@@ -254,7 +265,7 @@ can be applied to all variants of dropdown.
 
 <div className="image--fixed">
 
-![Structure and spacing for a multiselect dropdown](images/dropdown-style-3.png)
+![Structure and spacing for a multiselect dropdown](images/dropdown-style-7.png)
 
 </div>
 
@@ -262,20 +273,18 @@ can be applied to all variants of dropdown.
   Structure and spacing measurements for a multiselect dropdown | px / rem
 </Caption>
 
-### Combo box
+### Inline dropdown
 
-| Element    | Property      | px / rem | Spacing token |
-| ---------- | ------------- | -------- | ------------- |
-| Label      | margin-bottom | 8 / 0.5  | `$spacing-03` |
-| Field      | padding-left  | 16 / 1   | `$spacing-05` |
-|            | padding-right | 72 / 4.5 | –             |
-| Chevron    | padding-right | 16 / 1   | `$spacing-05` |
-| Clear icon | padding-right | 8 / .5   | `$spacing-03` |
+| Class       | Property                    | px / rem | Spacing token |
+| ----------- | --------------------------- | -------- | ------------- |
+| Field text  | padding-right, padding-left | 16 / 1   | `$spacing-05` |
+| Menu option | padding-right, padding-left | 16 / 1   | `$spacing-05` |
+| Chevron     | padding-left                | 16 / 1   | `$spacing-05` |
 
 <div className="image--fixed">
 
-![Spacing for multiselect dropdown with filtering](images/dropdown-style-7.png)
+![Structure and spacing for inline dropdown](images/dropdown-style-8.png)
 
 </div>
 
-<Caption>Spacing for multiselect dropdown with filtering | px / rem</Caption>
+<Caption>Structure and spacing for inline dropdown | px / rem</Caption>
