--- a/src/pages/components/dropdown/style.mdx
+++ b/src/pages/components/dropdown/style.mdx
@@ -81,7 +81,7 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 |                | Menu option        | text color       | `$text-01`           |
 |                | Field: light       | background-color | `$hover-light-ui`    |
 |                | Menu option: light | background-color | `$hover-light-ui`    |
-| Invalid        | Warning icon       | svg              | `$support-01`        |
+| Invalid        | Error icon         | svg              | `$support-01`        |
 |                | Field              | border           | `$support-01`        |
 |                | Error message      | text-color       | `$text-error`        |
 | Warning        | Warning message    | text-color       | `$text-01`           |
@@ -95,6 +95,7 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 | Disabled       | Field              | background-color | `$disabled-01`       |
 |                | Field              | text color       | `$disabled-02`       |
 |                | Label              | text color       | `$disabled-02`       |
+|                | Chevron            | svg              | `$disabled-02`       |
 
 <Row>
 <Column colLg={12}>
@@ -117,28 +118,6 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 <Caption>Multi-select dropdown states</Caption>
 
 ### Inline loading
-
-<!--
-| Element            | State    | Property         | Color token          |
-| ------------------ | -------- | ---------------- | -------------------- |
-| Field              | Enabled  | background-color | `transparent`        |
-|                    | Hover    | background-color | `$hover-ui`          |
-| Field text         | Enabled  | text color       | `$text-01`           |
-| Chevron            | Enabled  | svg              | `$icon-01`           |
-| Menu option        | Enabled  | text color       | `$text-02`           |
-|                    | Enabled  | background-color | `$field-01`          |
-|                    | Hover    | background-color | `$hover-ui`          |
-|                    | Hover    | text color       | `$text-01`           |
-|                    | Active   | background-color | `$selected-ui`       |
-|                    | Selected | background-color | `$selected-ui`       |
-|                    | Selected | checkmark        | `$icon-01`           |
-| Menu option: light | Enabled  | background-color | `$field-01`          |
-|                    | Hover    | background-color | `$hover-light-ui`    |
-|                    | Active   | background-color | `$selected-light-ui` |
-| Error              | Invalid  | svg              | `$support-01`        |
-|                    | Invalid  | border-bottom    | `$support-01`        |
-|                    | Invalid  | text-color       | `$text-error`        |
--->
 
 | Element  | State               | Property         | Color token          |
 | -------- | ------------------- | ---------------- | -------------------- |
