fix(typo): replace colon with period

--- a/src/pages/guidelines/2x-grid/overview.mdx
+++ b/src/pages/guidelines/2x-grid/overview.mdx
@@ -111,7 +111,7 @@ fluid grid, or by tiling fixed boxes in multiples.
 A [fluid grid](#fluid-grid) divides space by twos. This division is immediately
 evident in the 2x column structure. Within a breakpoint, the column count is
 constant, and unit size scales with screen size. Choose a column count by
-starting with one, then divide by two as needed:
+starting with one, then divide by two as needed.
 
 #### Fixed grid
 
