fix(Tabs): set `scrollIntoView` to `false`

--- a/src/pages/components/tabs/code.mdx
+++ b/src/pages/components/tabs/code.mdx
@@ -68,7 +68,7 @@ documentation, see the Storybooks for each framework below.
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tabs',
     }}>{`
 <div style={{ width: '50%' }}>
-  <Tabs>
+  <Tabs scrollIntoView={false}>
     <Tab
       href="#"
       id="tab-1"
