--- a/src/pages/components/tabs/usage.mdx
+++ b/src/pages/components/tabs/usage.mdx
@@ -56,7 +56,7 @@ Tabs are used to quickly navigate between views within the same context.
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tabs',
     }}>{`
 <div style={{ width: '50%' }}>
-  <Tabs>
+  <Tabs scrollIntoView={false}>
     <Tab
       href="#"
       id="tab-1"
