--- a/src/pages/guidelines/icons/usage.mdx
+++ b/src/pages/guidelines/icons/usage.mdx
@@ -44,7 +44,7 @@ important information.
 </Column>
 <Column colLg={4} colMd={4}  noGutterSm>
   <ResourceCard
-    subTitle="Get the IBM Icons (16px, 20px) library"
+    subTitle="IBM Icons (16px, 20px) library"
     href="sketch://add-library/cloud/028e0598-591e-428c-a490-f6ec64b15ea7"
     >
       <MdxIcon name="sketch" />
