--- a/src/pages/guidelines/icons/usage.mdx
+++ b/src/pages/guidelines/icons/usage.mdx
@@ -52,7 +52,7 @@ important information.
 </Column>
 <Column colLg={4} colMd={4}  noGutterSm>
   <ResourceCard
-    subTitle="Get the IBM Icons (24px, 32px) library"
+    subTitle="IBM Icons (24px, 32px) library"
     href="sketch://add-library/cloud/d530998a-c94c-4f1c-bc0e-c05417e067e3"
     >
       <MdxIcon name="sketch" />
