docs: fix tile wording

--- a/src/pages/designing/kits/axure.mdx
+++ b/src/pages/designing/kits/axure.mdx
@@ -48,7 +48,7 @@ Library `+` icon at the top of the Libraries pane. Locate and select the
 <Row className="resource-card-group">
 <Column colMd={4} colLg={4} noGutterSm>
   <ResourceCard
-    subTitle="Get the Axure widget library"
+    subTitle="Axure widget library"
     href="https://github.com/IBM/design-kit/blob/master/Axure/IBM%20Carbon%2010.rplib?raw=true"
     actionIcon="download">
 
@@ -68,7 +68,7 @@ elements.
 <Row className="resource-card-group">
 <Column colMd={4} colLg={4} noGutterSm>
   <ResourceCard
-    subTitle="Get the Axure template"
+    subTitle="Axure template"
     href="https://github.com/IBM/design-kit/blob/master/Axure/ibm-carbon-template.rp?raw=true"
     actionIcon="download">
 
