--- a/src/pages/components/dropdown/style.mdx
+++ b/src/pages/components/dropdown/style.mdx
@@ -181,7 +181,7 @@ can be applied to all variants of dropdown.
 
 </div>
 
-<Caption>Dropdown sizes | px / rem<</Caption>
+<Caption>Dropdown sizes | px / rem</Caption>
 
 ### Combo box
 
