--- a/src/pages/guidelines/icons/usage.mdx
+++ b/src/pages/guidelines/icons/usage.mdx
@@ -44,16 +44,16 @@ important information.
 </Column>
 <Column colLg={4} colMd={4}  noGutterSm>
   <ResourceCard
-    subTitle="Get the IBM Icons (16px, 20px) library"
-    href="sketch://add-library/cloud/KW2yr"
+    subTitle="IBM Icons (16px, 20px) library"
+    href="sketch://add-library/cloud/028e0598-591e-428c-a490-f6ec64b15ea7"
     >
       <MdxIcon name="sketch" />
  </ResourceCard>
 </Column>
 <Column colLg={4} colMd={4}  noGutterSm>
   <ResourceCard
-    subTitle="Get the IBM Icons (24px, 32px) library"
-    href="sketch://add-library/cloud/2bwkM"
+    subTitle="IBM Icons (24px, 32px) library"
+    href="sketch://add-library/cloud/d530998a-c94c-4f1c-bc0e-c05417e067e3"
     >
       <MdxIcon name="sketch" />
  </ResourceCard>
