Update side panel and full page images

--- a/src/pages/community/patterns/create-flows/index.mdx
+++ b/src/pages/community/patterns/create-flows/index.mdx
@@ -140,7 +140,7 @@ respectively.
 <Row>
 <Column colLg={8}>
 
-![Anatomy of a create side panel](images/SidePanelAnatomy.jpg)
+![Anatomy of a create side panel](images/SidePanelAnatomy.png)
 
 </Column>
 </Row>
@@ -364,7 +364,7 @@ consequences, show a modal alerting them that the changes won't be saved.
 <Row>
 <Column colLg={8}>
 
-![Full page anatomy](images/FullPageAnatomy80px.jpg)
+![Full page anatomy](images/FullPageAnatomy64px.png)
 
 </Column>
 </Row>
