lighter pink circles for full page

--- a/src/pages/community/patterns/create-flows/index.mdx
+++ b/src/pages/community/patterns/create-flows/index.mdx
@@ -364,7 +364,7 @@ consequences, show a modal alerting them that the changes won't be saved.
 <Row>
 <Column colLg={8}>
 
-![Full page anatomy](images/FullPageAnatomy64px.png)
+![Full page anatomy](images/FullPageAnatomy64px.jpg)
 
 </Column>
 </Row>
